Added basic Stock Overview List with navigation

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,36 +6,27 @@ appTitle=Warehouse
 #YDES: Application description
 appDescription=
 
-#~~~ Worklist View ~~~~~~~~~~~~~~~~~~~~~~~~~~
-#XTIT: Worklist view title
-worklistViewTitle=Manage <A_MatlStkInAcctModPlural>
+#~~~ Main List ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-#XTIT: Worklist page title
-worklistTitle=Warehouse
-
-#XTIT: Table view title
-worklistTableTitle=<A_MatlStkInAcctModPlural>
-
-#XTOL: Tooltip for the search field
-worklistSearchTooltip=Enter an <A_MatlStkInAcctMod> name or a part of it.
-
-#XBLI: text for a table with no data with filter or search
-worklistNoDataWithSearchText=No matching <A_MatlStkInAcctModPlural> found
-
-#XTIT: Table view title with placeholder for the number of items
-worklistTableTitleCount=<A_MatlStkInAcctMod> ({0})
-
-#XTIT: The title of the column containing the Material of A_MatlStkInAcctMod
-tableNameColumnTitle=<Material>
-
-#XTIT: The title of the column containing the MatlWrhsStkQtyInMatlBaseUnit and the unit of measure
-tableUnitNumberColumnTitle=<MatlWrhsStkQtyInMatlBaseUnit>
-
-#XBLI: text for a table with no data
-tableNoDataText=No <A_MatlStkInAcctModPlural> are currently available
+mainListTitle=Warehouse
 
 #XLNK: text for link in 'not found' pages
-backToWorklist=Show Warehouse
+backToMainList=Show Main List
+
+#~~~ Stock Overview List ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+stockOverviewListTitle=Stock Overview
+
+stockOverviewListTableTitle=Materials
+stockOverviewListTableTitleCount=Materials ({0})
+
+#~~~ Common List View ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+#XBLI: text for a table with no data with filter or search
+listNoDataWithSearchText=No matching records found
+
+#XBLI: text for a table with no data
+tableNoDataText=No records are currently available
 
 #~~~ Object View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XTIT: Object view title
@@ -57,16 +48,16 @@ MatlWrhsStkQtyInMatlBaseUnitLabel=MatlWrhsStkQtyInMatlBaseUnit
 saveAsTileTitle=Warehouse - {0}
 
 #XTIT: Send E-Mail subject
-shareSendEmailWorklistSubject=<Email subject PLEASE REPLACE ACCORDING TO YOUR USE CASE>
+shareSendEmailListSubject=Warehouse App
 
 #YMSG: Send E-Mail message
-shareSendEmailWorklistMessage=<Email body PLEASE REPLACE ACCORDING TO YOUR USE CASE>\r\n{0}
+shareSendEmailListMessage=Link to warehouse application:\r\n{0}
 
 #XTIT: Send E-Mail subject
-shareSendEmailObjectSubject=<Email subject including object identifier PLEASE REPLACE ACCORDING TO YOUR USE CASE> {0}
+shareSendEmailObjectSubject=Warehouse App {0}
 
 #YMSG: Send E-Mail message
-shareSendEmailObjectMessage=<Email body PLEASE REPLACE ACCORDING TO YOUR USE CASE> {0} (id: {1})\r\n{2}
+shareSendEmailObjectMessage=Details of warehouse application item: {0} (id: {1})\r\n{2}
 
 
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~~
