Filter blank material in Stock Overview

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -17,8 +17,8 @@ backToMainList=Show Main List
 
 stockOverviewListTitle=Stock Overview
 
-stockOverviewListTableTitle=Materials
-stockOverviewListTableTitleCount=Materials ({0})
+stockOverviewListTableTitle=Material Stocks
+stockOverviewListTableTitleCount=Material Stocks ({0})
 
 #~~~ Common List View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
