Added Stocktake List page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -17,8 +17,15 @@ backToMainList=Show Main List
 
 stockOverviewListTitle=Stock Overview
 
-stockOverviewListTableTitle=Material Stocks
-stockOverviewListTableTitleCount=Material Stocks ({0})
+stockOverviewListTableTitle=Stocks
+stockOverviewListTableTitleCount=Stocks ({0})
+
+#~~~ Stocktake List ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+stocktakeListTitle=Stocktake
+
+stocktakeListTableTitle=Items
+stocktakeListTableTitleCount=Items ({0})
 
 #~~~ Common List View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
