Add basic Goods Receipt List page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,6 +20,13 @@ stockOverviewListTitle=Stock Overview
 stockOverviewListTableTitle=Stocks
 stockOverviewListTableTitleCount=Stocks ({0})
 
+#~~~ Goods Receipt ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+goodsReceiptListTitle=Goods Receipt
+
+goodsReceiptListTableTitle=Items
+goodsReceiptListTableTitleCount=Items ({0})
+
 #~~~ Stocktake List ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 stocktakeListTitle=Stocktake
