--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -92,3 +92,4 @@ notFoundText=The requested resource was not found
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+errorBAPITitle=An error occured:
