Add Post method with validations

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -27,6 +27,8 @@ goodsReceiptListTitle=Goods Receipt
 goodsReceiptListTableTitle=Items
 goodsReceiptListTableTitleCount=Items ({0})
 
+goodsReceiptSucessMsg=GR document {0} / {1} has been created
+
 #~~~ Stocktake List ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 stocktakeListTitle=Stocktake
