Deployed the app in S4HC and adjusted Manifest and Neo App JSON files for it to work

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,7 +1,7 @@
 # This is the resource bundle for Warehouse
 
 #XTIT: Application name
-appTitle=Warehouse
+appTitle=Manage Warehouse
 
 #YDES: Application description
 appDescription=
