Add Open Qty and Stock Type in GR Details

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -29,6 +29,8 @@ goodsReceiptListTableTitleCount=Items ({0})
 
 goodsReceiptSucessMsg=GR document {0} / {1} has been created
 
+goodsReceiptItemNoData=No items available
+
 #~~~ Stocktake List ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 stocktakeListTitle=Stocktake
