Add Basic Stocktake Post

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -31,12 +31,14 @@ goodsReceiptSucessMsg=GR document {0} / {1} has been created
 
 goodsReceiptItemNoData=No items available
 
-#~~~ Stocktake List ~~~~~~~~~~~~~~~~~~~~~~~~~~
+#~~~ Stocktake ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 stocktakeListTitle=Stocktake
 
 stocktakeListTableTitle=Items
 stocktakeListTableTitleCount=Items ({0})
+
+stocktakeSuccessMsg=Stocktake document {0} has been counted
 
 #~~~ Common List View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
