Add Goods Issue Prod Order List page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,7 +4,7 @@
 appTitle=Manage Warehouse
 
 #YDES: Application description
-appDescription=
+appDescription=Manage Warehouse
 
 #~~~ Main List ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -30,6 +30,17 @@ goodsReceiptListTableTitleCount=Items ({0})
 goodsReceiptSucessMsg=GR document {0} / {1} has been created
 
 goodsReceiptItemNoData=No items available
+
+#~~~ Goods Issue ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+goodsIssueListTitle=Goods Issue
+
+goodsIssueListTableTitle=Items
+goodsIssueListTableTitleCount=Items ({0})
+
+goodsIssueSucessMsg=GI document {0} / {1} has been created
+
+goodsIssueItemNoData=No items available
 
 #~~~ Stocktake ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
