Change GR Success MSg to Goods Movement common

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,14 +20,16 @@ stockOverviewListTitle=Stock Overview
 stockOverviewListTableTitle=Stocks
 stockOverviewListTableTitleCount=Stocks ({0})
 
+#~~~ Material Document ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+materialDocSucessMsg=Material document {0} / {1} has been created
+
 #~~~ Goods Receipt ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 goodsReceiptListTitle=Goods Receipt
 
 goodsReceiptListTableTitle=Items
 goodsReceiptListTableTitleCount=Items ({0})
-
-goodsReceiptSucessMsg=GR document {0} / {1} has been created
 
 goodsReceiptItemNoData=No items available
 
@@ -37,8 +39,6 @@ goodsIssueListTitle=Goods Issue
 
 goodsIssueListTableTitle=Items
 goodsIssueListTableTitleCount=Items ({0})
-
-goodsIssueSucessMsg=GI document {0} / {1} has been created
 
 goodsIssueItemNoData=No items available
 
