Add the Stock Transfer codes from Christine

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,6 +20,13 @@ stockOverviewListTitle=Stock Overview
 stockOverviewListTableTitle=Stocks
 stockOverviewListTableTitleCount=Stocks ({0})
 
+#~~~ Stock Transfer List ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+stockTransferListTitle=Stock Transfer
+
+stockTransferListTableTitle=Stocks
+stockTransferListTableTitleCount=Stocks ({0})
+
 #~~~ Material Document ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 materialDocSucessMsg=Material document {0} / {1} has been created
