Add Picking Delivery List page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -58,6 +58,15 @@ stocktakeListTableTitleCount=Items ({0})
 
 stocktakeSuccessMsg=Stocktake document {0} has been counted
 
+#~~~ Picking Outbound Delivery ~~~~~~~~~~~~~~~~~~~
+
+pickingDeliveryListTitle=Picking
+
+pickingDeliveryListTableTitle=Items
+pickingDeliveryListTableTitleCount=Items ({0})
+
+pickingDeliverySuccessMsg=Delivery document {0} has been updated
+
 #~~~ Common List View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #XBLI: text for a table with no data with filter or search
