Changes for Covalent •	NEW MENU: Reservations – Picking (copy of menu item Goods Issue Reservations): 1)	Add filters for: 1.	Reservation number 2.	Plant 3.	Storage location 4.	EAM work order 2)	Add fields in list display: 1.	Plant 2.	Storage location 3.	EAM work order Add new Staging Area field. On post the staging area is set and the status set to Staged.
New menu item - Staged Reservation. Includes a button which changes the staging status to Handed out to Requestor.

Addition of filter items in the Stock Overview screen

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -49,6 +49,24 @@ goodsIssueListTableTitleCount=Items ({0})
 
 goodsIssueItemNoData=No items available
 
+#~~~ Picking Reservation ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+pickingResvListTitle=Picking Reservations
+
+pickingResvListTableTitle=Items
+pickingResvListTableTitleCount=Items ({0})
+
+pickingResvItemNoData=No items available
+
+#~~~ Staged Reservation ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+stagedResvListTitle=Picking Reservations
+
+stagedResvListTableTitle=Items
+stagedResvListTableTitleCount=Items ({0})
+
+stagedResvItemNoData=No items available
+
 #~~~ Stocktake ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 stocktakeListTitle=Stocktake
